# Paper-agent

./: .env.example  .gitignore  AI开发学习路线.md  PaperAgent涉及的AI技术.md  config.toml  pyproject.toml
eval/: analyze.py  cases.py  runner.py
src/paper_agent/: __init__.py  config.py  graph.py  main.py  state.py
src/paper_agent/agents/: __init__.py  planner.py  ranker.py  reviewer.py  synthesizer.py
src/paper_agent/llm/: __init__.py  client.py
src/paper_agent/models/: __init__.py  claim.py  comparison.py  paper.py  trace.py
src/paper_agent/store/: __init__.py  evidence_store.py  output_writer.py  sqlite_store.py
src/paper_agent/tools/: __init__.py  compare.py  extract.py  pdf.py  search.py  write_review.py
tests/: conftest.py  test_graph.py  test_models.py
tests/test_agents/: test_planner.py  test_ranker.py  test_reviewer.py
tests/test_store/: test_evidence_store.py
tests/test_tools/: test_compare.py  test_extract.py  test_pdf.py  test_search.py
