[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-agent"
version = "0.1.0"
description = "AI agent for paper research and survey generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "langgraph>=0.2.60",
    "anthropic>=0.49.0",
    "PyMuPDF>=1.25.0",
    "arxiv>=2.1.3",
    "semanticscholar>=0.8.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.scripts]
paper-agent = "paper_agent.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
